Fixing overflow

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
@@ -163,13 +164,6 @@ ul {
 
 @media (max-width: 768px) {
     
-    body{
-        height: 100vh;
-    }
-    
-    .main-content {
-        padding: 10px;
-    }
     .header-banner {
         padding: 20px 0;
         display: block;
@@ -189,29 +183,19 @@ ul {
     .input-wrapper {
         flex-direction: column;
         align-items: center;
+        width: 95%;
     }
     .input-title, .button-add {
         border-radius: 25px;
     }
-    .button-add {
-        width: 50%;
-        margin-top: 5%;
-    }
 
-    .button-draw {
-        padding: 10px 15px;
+    .button-add, .input-name{
+        width: 80%;
+        margin-top: 5%;
     }
 }
 
 @media (max-width: 480px) {
-    body {
-        height: auto;
-        padding: 10px;
-    }
-
-    .main-content {
-        padding: 5px;
-    }
 
     .header-banner {
         padding: 10px 0;
@@ -221,8 +205,7 @@ ul {
     }
 
     .input-section {
-        padding: 10px;
-        height: auto;
+        padding: 20px;
     }
 
     .main-title {
@@ -231,24 +214,21 @@ ul {
 
     .section-title {
         font-size: 24px;
+        margin-top: 5%;
     }
 
     .input-wrapper {
         flex-direction: column;
         align-items: center;
+        width: 85%;
     }
 
     .input-title, .button-add {
         border-radius: 25px;
     }
 
-    .button-add {
+    .button-add, .input-name{
         width: 100%;
-        margin-top: 10px;
-    }
-
-    .button-draw {
-        padding: 10px;
-        font-size: 14px;
+        margin-top: 5%;
     }
 }
